<resources>
    <string name="app_name">Electronic Manual</string>
    <string name="login">Home</string>
    <string name="tv">TV</string>
    <string name="apps">Apps</string>
    <string name="appstore">App Store</string>
    <string name="media">Media</string>
    <string name="settings">Settings</string>
    <string name="registration">Registration</string>
    <string name="registration_text">User needs to register themselves to access the smart features. Registration can either be done by mobile phone or using Gmail. User can skip the Login and register later.</string>
    <string name="appstore_text">User can enjoy unlimited applications with our Smart Store and Google Play Store.</string>
    <string name="media_text">Multimedia module is available to users for their enjoyment by listening to music, looking at photos, to relax and suit the mood. Browse between music, video, picture and by clicking on the selected file, enter the appropriate interface.</string>
    <string name="music">Music</string>
    <string name="video">Video</string>
    <string name="picture">Pictures</string>
    <string name="folder">Folders</string>
    <string name="music_text">Music interface displays the internal and external music resources.</string>
    <string name="video_text">Video interface displays the internal and external video resources.</string>
    <string name="picture_text">Picture interface displays the internal and external picture resources.</string>
    <string name="folder_text">Shows various types of file: video, audio, txt file of different format.</string>
    <string name="apps_text"><![CDATA[Apps contains different types of apps, browser, file manager, application manager & memory manager. User can access various downloaded apps by press “APPS” key in remote or by pressing "HOME" key and navigating to Apps.]]></string>
    <string name="home_text"><![CDATA[Press the [Home Screen] key to go to homepage. Home page contains three categories, Home, AppStore and Source. \n\n1. In Home, user can access different types of downloaded and pre-installed apps like browser, file manager, application manager, E-manual, appstore, wireless display & memory manager etc. \n2. In App Store, user can access Google Playstore. \n3. For Source, refer to the second page. ]]></string>
    <string name="tube_video_downloader">Tube video downloader</string>
    <string name="tube_video_downloader_text">Videos can downloaded through this app. Using arrow reach to this app icon then press “OK” key.</string>
    <string name="browser">Browser</string>
    <string name="browser_text">Users can browse the web pages.</string>
    <string name="download">Download</string>
    <string name="download_text">Enables access of downloaded files of different types.</string>
    <string name="file_manager">File Manager</string>
    <string name="file_manager_text"><![CDATA[File manager to view various type video, audio & text files.]]></string>
    <string name="application_manager">Application Manager</string>
    <string name="application_manager_text">Enables user to manage installed apps.</string>
    <string name="uninstall">Uninstall</string>
    <string name="uninstall_text">Users can uninstall applications.</string>
    <string name="installation">Installation</string>
    <string name="installation_text">Users can install applications from internal and external storage.</string>
    <string name="clean">Clean</string>
    <string name="clean_text">Users can free cache memory using this.</string>
    <string name="memory_manager">Memory manager</string>
    <string name="memory_manager_text"><![CDATA[Enable to clean RAM by deleting junk & cached files.]]></string>
    <string name="electronic_manual">Electronic Manual</string>
    <string name="manual_text">A Complete build in guide for user to understand SMART TV\'s various operation.</string>
    <string name="settings_text">Press the [setting] key from remote or select setting from application window.</string>
    <string name="network_sett">Network setting</string>
    <string name="network_sett_text">Used for setting up Wi-Fi, LAN and other connections.</string>
    <string name="setting_wifi">Setting up Wi-Fi Connection</string>
    <string name="setting_wifi_text">1. Open settings then open network.\n2. Browse to third option named “Wireless Connection”.\n3. Press the right direction key to go to Wi-Fi, then turn it on by clicking [OK]\n4. Select the network to be connected then click [OK].\n5. Enter the password and then go to “Save” click [OK].</string>
    <string name="setting_lan">Setting up Ethernet Connection</string>
    <string name="setting_lan_text">1. Open settings then open network\n2. Browse to second option named “Wired Connection”.\n3. Press the right direction key to go to Open Ethernet, then turn it on by clicking [OK]. (it is on by default)\n4. Either enter the network address of the connection to be connected manually or choose “Automatically Obtain IP Address”</string>
    <string name="setting_hotspot">Setting up Wi-Fi Hotspot</string>
    <string name="setting_hotspot_text">1. Open settings then open network\n2. Browse to fifth option named “Wireless Hotspot”.\n3. Press the right direction key to go to Wi-Fi Hotspots, then turn it on by clicking [OK]\n4. Set up the network and then go to save and press [OK].\n5. Then turn on the Wi-Fi of the device you want to connect and find the network.\n6. Select that network and enter the set password to connect.</string>
    <string name="setting_pppoe">Setting up PPPoE</string>
    <string name="setting_pppoe_text">1. Open settings then open network\n2. Browse to fourth option named “PPPoE Connection” then turn it on by clicking [OK].\n3. Press the right direction key and enter Username and Password, then go to Dial and press [OK]\n4. If want to disconnect, go to hang and press [OK].</string>
    <string name="language">Language</string>
    <string name="language_text">For selecting language, by default has been set to English.</string>
    <string name="time_and_date">Time and date</string>
    <string name="date_and_time_text">For selecting date and time.</string>
    <string name="system">System</string>
    <string name="system_text">Shows information about device’s network layer and other information.</string>
    <string name="wireless_display">Wireless Display</string>
    <string name="wireless_display_text">Shows the option for screen mirroring. Turn on the wireless display of TV first, then turn on the screen mirroring function in your smart phones. Your phone will start scanning devices. Select the “Smart TV”, screen mirroring will start.</string>
    <string name="factory_reset">Factory Reset</string>
    <string name="factory_reset_text">To restore factory settings.</string>
    <string name="about">About</string>
    <string name="about_text">Shows information about TV.</string>
    <string name="tv_text">Different TV modes like ATV, AV, HDMI, can be accessed as per the requirement of the user by pressing [SOURCE] key from remote and selecting appropriate mode and then pressing [OK] key.</string>
    <string name="atv">ATV</string>
    <string name="atv_text">In ATV mode, press MENU key from remote, the screen will pop-up a TV menu interface. TV menu is on the TV for the user attributes related settings (including picture settings, sound settings, channel settings , settings etc.). It is divided into four major options: picture , sound , channel , settings, . Use arrow keys to navigate then press [OK] to enter.</string>
    <string name="channel_setting">Channel Setting</string>
    <string name="channel_sett_text">To set various channel functions ,It has following options:</string>
    <string name="channel_information">Channel information</string>
    <string name="channel_information_text">To provide general channel information.</string>
    <string name="color_system">Color system</string>
    <string name="color_system_text">By color system ,Color system encoding can be selected :PAL or NTSC. By default PAL is selected</string>
    <string name="sound_system">Sound system</string>
    <string name="sound_system_text"><![CDATA[Through sound system you can select various sound format : D/K , I, B/G & M. By default B/G is selected]]></string>
    <string name="manual_search">Manual search</string>
    <string name="manual_search_text">Channel can be tuned manually, after accessing manual search ,go to “increase” or “decrease” than press “OK” from remote, to search channel in manual mode.</string>
    <string name="auto_search">Auto Search</string>
    <string name="auto_search_text"><![CDATA[To search the channels automatically , go to “AUTO SEARCH” than “START SEARCHING” through arrow keys in remote & press “OK”.\n\nNote: for picture, sound and setting refer next para .]]></string>
    <string name="registration_note"><![CDATA[*Note -  TV must be connected to an Internet Connection while registration.]]></string>
    <string name="hdmi">HDMI</string>
    <string name="hdmi_text">Insert the HDMI cable in the HDMI port, Press [SOURCE] key then select the respective HDMI port and then press [OK]. HDMI supports Audio Return Channel (ARC) to feed output to AV receiver. HDMI supports high-speed bidirectional data communication link (HEC). HDMI supports Consumer Electronics Control (CEC). HDMI supports HDCP compliant devices.</string>
    <string name="picture_settings">Picture Settings</string>
    <string name="pic_sett_text">Picture Settings are used for picture adjustment functions, you can adjust the user options here. The options are shown below. select the appropriate value adjustment, as shown.</string>
    <string name="picture_mode">Picture Mode</string>
    <string name="pic_mode_text">To choose between different picture modes like :\nSTANDARD\nBRIGHT\nSOFT\nUSER</string>
    <string name="backlight">Backlight</string>
    <string name="backlight_text">Backlight level can be increase or decrease by this function.</string>
    <string name="color_temp">Color temperature</string>
    <string name="color_temp_text">Various color temperature mode : STANDARD ,WARM, COOL can be selected through this feature.</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="aspect_ratio_text">Aspect ratio of screen can be selected with following option : 4:3 ,16:9,FULL SCREEN, ZOOM 1,ZOOM 2.</string>
    <string name="dnr">DNR (digital noise reduction)</string>
    <string name="dnr_text">This feature for enhancing the picture quality by suppressing the digital noise.</string>
    <string name="sound_sett">Sound Settings</string>
    <string name="sound_mode">Sound Mode</string>
    <string name="sound_mode_text">To choose different sound mode.</string>
    <string name="balance">Balance</string>
    <string name="balance_text"><![CDATA[To balance the left & right speaker audio output.]]></string>
    <string name="spdif">SPDIF</string>
    <string name="spdif_text">To select between different SPDIF out options.</string>
    <string name="surround">Surround</string>
    <string name="surround_text">To turn ON/OFF surround sound.</string>
    <string name="sleep_time">Sleep time</string>
    <string name="sleep_time_text">T.V will automatically go to sleep mode after select time period, If this mode is enable.</string>
    <string name="blue_screen">Blue screen</string>
    <string name="blue_screen_text">To change the no signal screen color to blue.</string>
    <string name="key_lock">Key lock</string>
    <string name="key_lock_text">This option is lock the function of manual key, when key lock “ON” manual key button will not function by pressing.</string>
    <string name="cec">CEC ( Consumer Electronics Control )</string>
</resources>